assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@700&family=Shizuru&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
    box-sizing: border-box;
}
html {
    height: 100%;
    min-width: 100%;
}
header {
    width: 100%;
    grid-area: hd;
}
body {
    background-image: url("../images/stock-vector-hand-drawn-brown-and-black-colored-paw-prints-foot-prints-background-1368085664.jpg"); 
    background-position: center center;
    background-repeat: no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-attachment: fixed;
    height: 100vh;
    max-width: 100%;
    font-family: Fuzzy Bubbles, sans-serif;
    font-weight: 200;
    margin: 0;
    padding: 0;
    border: none;
    overflow: scroll;
    scroll-behavior: smooth;
    overflow-x: hidden;
    display: grid;
    grid-template-columns: 45% auto;
    grid-template-rows: auto auto 700px 700px auto;
    grid-template-areas: 
        "hd hd"
        "text text"
        "img1 img2"
        "img3 img4"
        "foot foot";
}

#logo {
    font-size: 3rem;
    font-family: Shizuru, sans-serif;
    letter-spacing: 5px;
    color: black;
    margin-left: 10px;
}
/* Nav bar */

.nav {
    width: 100%;
    top: 0;
    z-index: 1;
    border-bottom: 2px solid white;
    grid-area: hd;
}
#menu {
    list-style-type: none;
    font-family: Fuzzy Bubbles, sans-serif;
    font-size: calc(2rem+1vw);
    letter-spacing: 7px;
    display: inline-grid;
    text-align: center;
    background-color:hotpink;
    padding: 20px 0 20px 0;
    width: 100%;
    color: white;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}
#menu li{
    flex: 1;
}

li a {
    text-decoration: none;
    color: black;
    transition: background-color .5s;
}
li a:hover {
    background-color: rgba(255, 255, 255, 0.63);
    padding: 3.52px;
}
.intro-text-box {
    color: black;
    letter-spacing: 3px;
    text-transform: uppercase;
    font-family: Fuzzy Bubbles, sans-serif;
    grid-area: text;
    margin: 20px;
    background-color: aquamarine;
}

/* Hamburger menu */
/* .topnav {
    overflow: hidden;
    background-color: rgb(82, 60, 60);
    position: relative;
  }
  #logo-mobile {
    font-size: 17px;
    font-family: Shizuru, sans-serif;
    letter-spacing: 5px;
    color: black;
}
  div.topnav {
    display: none;
  }
  
  .topnav a {
    color: black;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
    display: block;
    border-bottom: 1px solid white;
    background-color: hotpink;
}
  
  
  .topnav a.icon {
    background: black;
    display: block;
    position: absolute;
    right: 0;
    top: 2.5px;
  }
  

  .topnav a:hover {
    background-color: #ddd;
    color: rgb(102, 102, 102);
  }
  
  
  .active {
    background-color: hotpink;
    
  }
/* Images and text styling */
.container-1 {
  background-image: url("../images/amstaff-dog-img.png");
    width: 100%;
    height: 100%;
    position: relative;
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    grid-area: img1; 
}

.container-1 p {
    position: relative;
    display: grid;
    grid-template-columns: 65%;
    justify-content: center;
    text-align: left;
    font-family: Fuzzy Bubbles, sans-serif;
    font-size: 1.1em;
    top: 380px;
}

#pool-title {
    text-align: center;
    font-family: Shizuru, sans-serif;
    font-size: 1.9em;
    letter-spacing: 4px;
    margin-bottom: 2%;

}

#pool-title a {
    text-decoration: none;
    color: black;
}

#pool-title a:hover {
    font-size: 1.7rem;
}

#logo:hover {
    color: white;
} 
/*
.container-2 {
 
    width: 100%;
    height: 100%;
    position: relative;
    display: flex;
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
    grid-area: img2;
    flex-direction: column;
    flex-wrap: wrap;
    align-content: center;
    justify-content: center;
    align-items: center;
}

.img-2 {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.playground-text {
    display: grid;
    grid-template-columns: minmax(auto, 18em);
    grid-template-rows: minmax(auto, 15em);
    justify-content: center;
    text-align: center;
    font-family: Fuzzy Bubbles, sans-serif;
    font-size: 1.1em;
}

#playground-title {
    display: flex;
    font-size: 1.9em;
    letter-spacing: 4px;
    margin-bottom: 2%;

}

#playground-title a {
    text-decoration: none;
    color: black;
}

#playground-title a:hover {
    font-size: 1.7rem;
}

.container-3 {
    background-image: url("../images/containter1-img.png");
    width: 100%;
    height: 200%;
    position: relative;
    display: flex;
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    grid-area: img3;
    flex-direction: column;
    flex-wrap: wrap;
    align-content: center;
    justify-content: center;
    align-items: center;

}

.img-3 {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.gym-text {
    display: grid;
    grid-template-columns: minmax(auto, 18em);
    grid-template-rows: minmax(auto, 15em);
    justify-content: center;
    text-align: center;
    font-family: Fuzzy Bubbles, sans-serif;
    font-size: 1.1em;
}

#gym-title {
    display: flex;
    font-size: 1.9em;
    letter-spacing: 4px;
    margin-bottom: 2%;

}

#gym-title a {
    text-decoration: none;
    color: black;
}

#gym-title a:hover {
    font-size: 1.7rem;
}

.container-4 {
    
    width: 100%;
    height: 100%;
    position: relative;
    display: flex;
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    grid-area: img4;
    flex-direction: column;
    flex-wrap: wrap;
    align-content: center;
    justify-content: center;
    align-items: center;
}
/* ... */

